# coin-flip

./: Cargo.toml  notes.txt
src/: app.rs  auth.rs  main.rs  market_state.rs  order.rs  orderbook.rs  subscription_manager.rs  tracker.rs  utils.rs
src/api/: client.rs  response.rs
src/strategy/: arb.rs  gimme.rs  mod.rs  signal.rs
src/ws/: client.rs  message.rs
