[package]
name = "sniper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["now", "serde"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "*"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "v5"] }
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
base64 = "0.22"
serde_with = "3"
rust_decimal = "*"
hmac = "*"
sha2 = "*"
hex = "*"
kanal = "0.1"
url = "*"
dashmap = "*"
tokio-util = "0.7"
